# Study-Birdy

./: .replit  README.md  arranged_subjects.csv  bisect_seek.py  keep_alive.py  main.py  outline.txt  pyproject.toml  read_text.py  requirement.py  scraper.py  subject.py  subjects.csv  testing_code.py
jsons/: aboutme.json  help.json
