[tool.poetry]
name = "repl_python3_beta_Study-Birdy"
version = "0.1.0"
description = ""
authors = ["kmallari <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
webbot = "^0.34"
bs4 = "^0.0.1"
pandas = "^1.2.5"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
